--- a/icons/SConscript
+++ b/icons/SConscript
@@ -18,8 +18,8 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
-Import('env')
+Import('main_env')
 
-env.SConscript('neil/SConscript')
-env.SConscript('hicolor/SConscript')
+main_env.SConscript('neil/SConscript')
+main_env.SConscript('hicolor/SConscript')
 
