--- a/applications/SConscript
+++ b/applications/SConscript
@@ -18,7 +18,7 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
-Import('env', 'install', 'install_recursive')
+Import('main_env', 'install')
 import glob
 
 install('${APPLICATIONS_PATH}', 'neil.desktop', 0o644)
