--- a/bin/SConscript
+++ b/bin/SConscript
@@ -16,7 +16,7 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
-Import('env', 'install')
+Import('install')
 
 install('${BIN_PATH}', 'neil', 0o755)
 install('${BIN_PATH}', 'neil-combrowser', 0o755)
