--- a/demosongs/SConscript
+++ b/demosongs/SConscript
@@ -18,7 +18,7 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
-Import('env', 'install', 'install_recursive')
+Import('install', 'install_recursive')
 import glob
 
 install('${SHARE_PATH}/demosongs', glob.glob('*.ccm'), 0o644)
