--- a/doc/SConscript
+++ b/doc/SConscript
@@ -1,9 +1,9 @@
 #encoding: latin-1
 
 import glob
-Import('env', 'install', 'install_recursive')
+Import('main_env', 'install', 'install_recursive')
 
 docbook = Builder(action='xmlto html -m doc/docbook/config.xsl doc/docbook/index.xml -o doc/manual')
-env.Append(BUILDERS={'DocBook' : docbook})
-env.DocBook('docbook/index.xml')
+main_env.Append(BUILDERS={'DocBook' : docbook})
+main_env.DocBook('docbook/index.xml')
 install('${DOC_PATH}/manual', glob.glob('manual/*'))
