--- a/pixmaps/SConscript
+++ b/pixmaps/SConscript
@@ -19,7 +19,7 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301,
 # USA.
 
-Import('env', 'install', 'install_recursive')
+Import('install')
 import glob
 
 for filename in glob.glob('*.jpeg'):
