--- a/src/neil/SConscript
+++ b/src/neil/SConscript
@@ -18,7 +18,7 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
-Import('env', 'install', 'install_recursive', 'pip')
+Import('install', 'pip')
 import glob
 
 for filename in glob.glob('*.py'):
