--- a/libneil/src/plugins/lv2adapter/SConscript
+++ b/libneil/src/plugins/lv2adapter/SConscript
@@ -27,9 +27,9 @@
 Import('pluginenv', 'build_plugin')
 
 lv2_pluginenv = pluginenv.Clone()
-lv2_pluginenv.Append(LIBS=['lilv-0', 'suil-0', 'gtk-3'])
+lv2_pluginenv.Append(LIBS=['lilv-0', 'suil-0', 'gtk-3', 'zzub'])
 
-lv2_pluginenv.Append(CCFLAGS='-pthread `pkg-config gtk+-3.0 suil-0 lilv-0 --cflags` -Ilibneil/src/libzzub -Ilibneil/src/plugins/lv2adapter')
+lv2_pluginenv.Append(CCFLAGS='-pthread `pkg-config gtk+-3.0 suil-0 lilv-0 --cflags` -Ilibneil/src/plugins/lv2adapter')
 
 lv2_files = [ 
     'lv2_adapter.cpp', 
