--- a/libneil/src/plugins/SConscript
+++ b/libneil/src/plugins/SConscript
@@ -33,12 +33,12 @@ def ZzubPlugin(self, target, source):
 # and also provides a context for that sconscript to build a plugin.
 # this allows the plugin sconscript to be as tiny as possible, and still
 # enables us to generate project files and the like.
-
-plugin_dir_path = ""
+plugins_path = env['SRC_PATH'] + '/libneil/src/plugins'
 pluginenv = None
+
 def build_plugin(localenv, libname, files, helpfiles=None, deffile='zzub_plugin.def'):
-    files = [plugin_dir_path + "/" + filename for filename in files]
-    plugin = ZzubPlugin(localenv, '${LIB_BUILD_PATH}/zzub/' + libname, files)
+    # files = [os.path.join(plugins_path, os.path.basename(os.getcwd()) , filename) for filename in files]
+    plugin = ZzubPlugin(localenv, '${LIB_BUILD_PATH}/zzub/' + libname , files)
     install_plugin(plugin)
     if helpfiles:
         helpsrcdir = '${ROOTPATH}/share/doc/zzub/plugins/'+libname+'/'
@@ -48,11 +48,13 @@ def build_plugin(localenv, libname, files, helpfiles=None, deffile='zzub_plugin.
 
 Export('build_plugin')
 
-for filename in os.listdir('.'):
-    plugin_dir_path = os.path.abspath(filename)
-    plugin_name = os.path.basename(filename)
-    if os.path.isfile(os.path.join(plugin_dir_path,'SConscript')):
+
+for plugin_name in [str(file) for file in env.Glob("*") if str(file) != "SConscript"]:
+    plugin_dir = os.path.join(plugins_path, plugin_name)
+    if os.path.isdir(plugin_dir) and env.FindFile("SConscript", plugin_dir):
+        scons_file = os.path.join(plugin_dir, 'SConscript')
         pluginenv = env.Clone()
-        Export('plugin_dir_path', 'pluginenv')
-        env.SConscript(os.path.join(plugin_dir_path, 'SConscript'))
+        Export('plugin_dir', 'pluginenv')
+        env.SConscript(scons_file, variant_dir='${BUILD_PATH}/libneil/src/plugins/' + plugin_name, duplicate = 0)
+
 
