--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = libneil/src/plugins/vst3adapter/vst3sdk
 	url = https://github.com/steinbergmedia/vst3sdk
 	ignore = untracked
+[submodule "loguru"]
+	path = loguru
+	url = https://github.com/emilk/loguru
