--- a/libneil/src/plugins/vst3adapter/SConscript
+++ b/libneil/src/plugins/vst3adapter/SConscript
@@ -41,7 +41,7 @@ vst3_pluginenv.Append(
     CCFLAGS='''
     -pthread `pkg-config gtk+-3.0 --cflags` 
     --include=stdint.h
-    -Ilibneil/src/libzzub -Ilibneil/src/utils/ -Ilibneil/src/plugins/vst3adapter/ 
+    -Ilibneil/src/libzzub -Ilibneil/src/plugins/vst3adapter/ 
     -Ilibneil/src/plugins/vst3adapter/vst3sdk -Ilibneil/src/plugins/vst3adapter/pluginterfaces 
     -Ilibneil/src/plugins/vst3adapter/public.sdk -Ilibneil/src/plugins/vst3adapter/base 
     -Ilibneil/src/plugins/vst3adapter/vst4gui/vstgui''',
