--- a/libneil/SConscript
+++ b/libneil/SConscript
@@ -28,7 +28,7 @@ posix = os.name == 'posix'
 linux = sys.platform == 'linux'
 x86_64 = platform.machine() == 'x86_64'
 
-Import('main_env')
+Import('main_env', 'tools_converter', 'bool_converter')
 
 ######################################
 #
@@ -63,16 +63,16 @@ class PkgVersionErr:
     def __str__(self):
         return "error: '%s' version needs to be > %s" % (self.lib, self.version)
 
-def tools_converter(value):
-    return value.split(',')
+# def tools_converter(value):
+#     return value.split(',')
 
-def bool_converter(value):
-    value = value.lower()
-    if value in ('true','enabled','on','yes','1'):
-        return True
-    elif value in ('false','disabled','off','no','0'):
-        return False
-    return bool(value)
+# def bool_converter(value):
+#     value = value.lower()
+#     if value in ('true','enabled','on','yes','1'):
+#         return True
+#     elif value in ('false','disabled','off','no','0'):
+#         return False
+#     return bool(value)
 
 def audioengine_converter(value):
     value = value.lower()
@@ -207,7 +207,7 @@ if gcc:
 ######################################
 # 64-bit fixes
 ######################################
-
+LINKFLAGS=[ '-L/usr/local/lib' ]
 import platform
 
 if x86_64:
@@ -311,11 +311,15 @@ env['PLUGINS_SRC_PATH'] = '${SRC_PATH}/libneil/src/plugins'
 env['PYZZUB_SRC_PATH'] = '${SRC_PATH}/libneil/src/pyzzub'
 env['LANTERNFISH_SRC_PATH'] = '${SRC_PATH}/libneil/src/lanternfish'
 env['KISSFFT_SRC_PATH'] = '${SRC_PATH}/libneil/src/kiss_fft'
+
+## no way to externally alter the DEBUG_POSTFIX setting in loguru
+env['LOGGER_LIB_NAME'] = 'logurud' if env['DEBUG'] else 'loguru'
+
 env['LOGGER_SRC_PATH'] = env['SRC_PATH'] + '/libneil/src/loguru'
 env['LOGGER_INCLUDE_PATH'] = env['LOGGER_SRC_PATH']
-env['LOGGER_BUILD_PATH'] = env['LOGGER_SRC_PATH'] + '/build/' + ('Debug' if env['DEBUG'] else 'Release')
+env['LOGGER_BUILD_PATH'] = env['LOGGER_SRC_PATH'] + '/build/' + ('debug' if env['DEBUG'] else 'release')
 
-env['LIB_BUILD_PATH'] = '${BUILD_PATH}/lib:${LOGGER_BUILD_PATH}'
+env['LIB_BUILD_PATH'] = '${BUILD_PATH}/lib'
 env['BIN_BUILD_PATH'] = '${BUILD_PATH}/bin'
 
 ######################################
@@ -547,10 +551,17 @@ if (not is_cleaning()) and (env['CONFIGURED'] != VERSION):
 # build loguru logging library 
 ######################################
 
-if not os.path.exists(env['LOGGER_BUILD_PATH']):
-    os.makedirs(env['LOGGER_BUILD_PATH'])
 
-if not os.path.exists(os.path.join(env['LOGGER_BUILD_PATH'], 'libloguru.a')) and not os.path.exists(os.path.join(env['LOGGER_BUILD_PATH'], 'libloguru.lib')):
+log_build_path = env['LOGGER_BUILD_PATH']
+log_lib_name = env['LOGGER_LIB_NAME']
+if not os.path.exists(log_build_path):
+    os.makedirs(log_build_path)
+
+
+
+if ( not os.path.exists(os.path.join(log_build_path, env['LOGGER_LIB_NAME'] + '.a')) and 
+     not os.path.exists(os.path.join(log_build_path, env['LOGGER_LIB_NAME'] + '.lib'))
+    ):
     prev_dir = os.getcwd()
     build_type = 'Debug' if env['DEBUG'] else 'Release'
     os.chdir(env['LOGGER_BUILD_PATH'])
@@ -558,7 +569,7 @@ if not os.path.exists(os.path.join(env['LOGGER_BUILD_PATH'], 'libloguru.a')) and
     env.Execute('cmake --build .')
     os.chdir(prev_dir)
 
-env.Append(LIBPATH=[env['LOGGER_BUILD_PATH']], LIBS=['loguru'])
+env.Append(LINKFLAGS=['-L${LOGGER_BUILD_PATH}'], LIBS=['${LOGGER_LIB_NAME}'])
 
 #######################################
 #
