--- a/libneil/SConscript
+++ b/libneil/SConscript
@@ -81,7 +81,10 @@ def audioengine_converter(value):
         sys.exit(1)
     return value
 
-opts = Variables( 'options.conf', ARGUMENTS )
+
+options_conf_file = os.path.join(main_env['BUILD_PATH'], 'options.conf')
+
+opts = Variables( options_conf_file, ARGUMENTS )
 opts.Add("PREFIX", 'Set the install "prefix" ( /path/to/PREFIX )', "/usr/local")
 opts.Add("LIBDIR", 'Set the install "libdir", will be concatenated to PREFIX', "/lib")
 opts.Add("DESTDIR", 'Set the root directory to install into ( /path/to/DESTDIR )', "")
@@ -399,6 +402,7 @@ def is_cleaning():
     try: return SCons.Script.Main.GetOption('clean')
     except: return SCons.Script.Main.options.clean
 
+
 if (not is_cleaning()) and ('configure' in COMMAND_LINE_TARGETS):
     import os
 
@@ -525,7 +529,7 @@ if (not is_cleaning()) and ('configure' in COMMAND_LINE_TARGETS):
 
     env = conf.Finish()
     env['CONFIGURED'] = VERSION
-    opts.Save('options.conf', env)
+    opts.Save(options_conf_file, env)
     print()
     print("Please check if above settings reflect what you want, then build libzzub using")
     print("\tscons")
@@ -534,13 +538,12 @@ if (not is_cleaning()) and ('configure' in COMMAND_LINE_TARGETS):
 ######################################
 # save config
 ######################################
-env.Precious('options.conf')
-opts.Save('options.conf', env)
+env.Precious(options_conf_file)
+opts.Save(options_conf_file, env)
 Help( opts.GenerateHelpText( env ) )
 
 if (not is_cleaning()) and (env['CONFIGURED'] != VERSION):
-    print("libzzub is not configured for version %s yet." % VERSION)
-    print("configured for %s" % env['CONFIGURED'])
+    print("libzzub is not configured for version ''%s', the configured version in '%s' is '%s'." % (VERSION, options_conf_file, env['CONFIGURED']))
     print()
     print("Please run 'scons configure' to configure libzzub.")
     sys.exit(1)
@@ -635,7 +638,7 @@ Export(
 )
 
 # generate signature
-env.Signature(target='include/zzub/signature.h', source='options.conf')
+env.Signature(target='include/zzub/signature.h', source=options_conf_file)
 # env.Signature(target='${BUILD_PATH}/libneil/include/zzub/signature.h', source='options.conf')
 print("env.signature done")
 
