make zidl generate 3 zzub headers: zzub.h, zzub_api.h zzub_data.h. move some typedefs from common.h to zzub_typedefs.h. cleanup types.h.

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ libneil/options.conf
 options.conf
 libneil/src/libzzub/libzzub.def
 libneil/include/zzub/zzub.h
+libneil/include/zzub/zzub*.h
 libneil/include/zzub/signature.h
 libneil/src/pyzzub/zzub/
 libneil/src/plugins/vstadapter/VST_SDK_2.4
