--- a/libneil/SConscript
+++ b/libneil/SConscript
@@ -611,7 +611,7 @@ env['BUILDERS'].update(builders)
 #######################################
 output = []
 output.append(env.ZIDLCHeader('${BUILD_PATH}/libneil/include/zzub/zzub.h', '${SRC_PATH}/libneil/include/zzub/zzub.zidl'))
-# output.append(env.ZIDLCDef('${BUILD_PATH}/libneil/pyzzub/libzzub.def', '${SRC_PATH}/libneil/include/zzub/zzub.zidl'))
+output.append(env.ZIDLCDef('${BUILD_PATH}/libneil/pyzzub/libzzub.def', '${SRC_PATH}/libneil/include/zzub/zzub.zidl'))
 output.append(env.ZIDLPyCtypes('${BUILD_PATH}/libneil/src/pyzzub/zzub/__init__.py', '${SRC_PATH}/libneil/include/zzub/zzub.zidl'))
 
 # make targets dependent on script
@@ -640,7 +640,6 @@ Export(
 # generate signature
 env.Signature(target='include/zzub/signature.h', source=options_conf_file)
 # env.Signature(target='${BUILD_PATH}/libneil/include/zzub/signature.h', source='options.conf')
-print("env.signature done")
 
 env.SConscript('${LANTERNFISH_SRC_PATH}/SConscript', variant_dir='${BUILD_PATH}/libneil/src/lanternfish', duplicate=0)
 env.SConscript('${KISSFFT_SRC_PATH}/SConscript', variant_dir='${BUILD_PATH}/libneil/src/kiss_fft', duplicate=0)
@@ -655,7 +654,13 @@ env.SConscript('${PYZZUB_SRC_PATH}/SConscript', variant_dir='${BUILD_PATH}/libne
 #######################################
 
 # install zzub plugin and type headers
-install(includepath+'/zzub', '${BUILD_PATH}/libneil/include/zzub/plugin.h')
-install(includepath+'/zzub', '${BUILD_PATH}/libneil/include/zzub/types.h')
-install(includepath+'/zzub', '${BUILD_PATH}/libneil/include/zzub/zzub.h')
-install(includepath+'/zzub', '${BUILD_PATH}/libneil/include/zzub/signature.h')
+# iterate all headers in '${BUILD_PATH}/libneil/include/zzub' and install them
+
+import glob
+for header in glob.glob('${BUILD_PATH}/libneil/include/zzub/*.h'):
+    install(includepath+'/zzub', header)
+    
+# install(includepath+'/zzub', '${BUILD_PATH}/libneil/include/zzub/plugin.h')
+# # install(includepath+'/zzub', '${BUILD_PATH}/libneil/include/zzub/types.h')
+# install(includepath+'/zzub', '${BUILD_PATH}/libneil/include/zzub/zzub.h')
+# install(includepath+'/zzub', '${BUILD_PATH}/libneil/include/zzub/signature.h')
