split up the ccm reader/writer and rearrange some headers

--- a/libneil/src/libzzub/SConscript
+++ b/libneil/src/libzzub/SConscript
@@ -46,7 +46,9 @@ files = [
     'midi_driver.cpp',
     'midi_track.cpp',
     'recorder.cpp',
-    'ccm.cpp',
+    'ccm_read.cpp',
+    'ccm_write.cpp',
+    'ccm_helpers.cpp',
     'connections.cpp',
     'input.cpp',
     'operations.cpp',
